# LAVASH

./: .gitignore  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
public/: ide-browser-start.html  lavash-build-id.js
public/ide-browser/: google-search.html
src/: App.css  App.tsx  lavash-ui-build-id.ts  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: lavash-commands.toml
src-tauri/src/: cloud_chat.rs  construct_chat.rs  gemini_image.rs  git.rs  lib.rs  lsp.rs  main.rs  ollama.rs  python_runtime.rs  resource_monitor.rs  secrets_store.rs  terminal.rs  window_chrome.rs  workspace.rs
src/features/lavashconstruct/: index.ts
src/i18n/: context.tsx  locale.ts  strings.en.ts  strings.ru.ts  strings.uk.ts  translateBare.ts
src/shared/components/: AppErrorBoundary.tsx  IdeExpandedTimerChip.tsx  SectionErrorBoundary.tsx  VirtualScrollList.tsx  WindowCaptionIcons.tsx  WindowDragSpacer.tsx  WindowEditMenu.tsx  WindowFileMenu.tsx  WindowFrameControls.tsx  WindowResizeEdges.tsx
src/shared/lib/: color.ts  formatElapsedClock.ts  globalErrorHandlers.ts  isTauriRuntime.ts  openExternalUrl.ts  purgeLegacyPlayerStorage.ts  safeLocalStorage.ts  syncWindowChromeBackground.ts  useIdeExpandedTimer.ts  useTauriEvent.ts  useWindowDrag.ts  windowDrag.ts  (+2 more)
src/styles/: globals.css  lavash-buttons.css
tools/: vite-tauri-dev.mjs
tools/python/: common.mjs  ensure.mjs  update.mjs
(+312 files in other folders)
