[package]
name = "lavash"
version = "0.1.0-alpha.1"
description = "LAVASH UI Design IDE"
authors = ["Heorh Holub"]
edition = "2021"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "lavash_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "custom-protocol", "unstable"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "blocking"] }
futures-util = "0.3"
sysinfo = "0.33"
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
tar = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_Security_Cryptography",
] }

[target.'cfg(not(windows))'.dependencies]
keyring = { version = "3", features = ["linux-native", "apple-native", "sync-secret-service"] }
